--- a/bundles/org.eclipse.rap.rwt/src/org/eclipse/swt/internal/widgets/tablekit/Table.default.css
+++ b/bundles/org.eclipse.rap.rwt/src/org/eclipse/swt/internal/widgets/tablekit/Table.default.css
@@ -6,7 +6,7 @@ Table {
 }
 
 TableItem {
-  color: black;
+  color: transparent;
   background-color: transparent;
 }
 
